・文字コード変換スクリプト ・８章 ・コマンドラインパーサー ・整理

--- a/Batch/バッチ.md
+++ b/Batch/バッチ.md
@@ -41,31 +41,14 @@ pause > nul
 
 ---
 
-## y押したら押した時刻を出力するサンプル
+## for文内で変数を利用する場合の注意
 
-``` batch
-@echo off
+forブロック内では基本的に変数は使えない。  
+使いたい場合は遅延環境変数という仕組みを利用する。  
+変数を使用する場合 `%` で囲うのではなく、 `!` で囲う。  
 
-REM "今日の日付"
-SET NOWDATE=%date:~-10,4%%date:~-5,2%%date:~-2,2%
-SET OUT_LOGFILE=Logfile_%NOWDATE%.txt
+例 :  
+× `%arg%`  
+○ `!arg!`  
 
-cd /d %~dp0 >> %OUT_LOGFILE%
-
-set /P USR_INPUT_STR="データ移行を行いますがよろしいですか？(Y/N) " 
-if /i %USR_INPUT_STR% neq y goto cancel
-
-echo *---------------------------------------* >> %OUT_LOGFILE%
-set time_tmp=%time: =0%
-set now=%date:/=%%time_tmp:~0,2%%time_tmp:~3,2%%time_tmp:~6,2%
-echo 開始 : %now% >> %OUT_LOGFILE%
-echo *---------------------------------------* >> %OUT_LOGFILE%
-
-:cancel
-echo.
-echo.
-echo 処理を中止しました。
-goto :end
-
-pause
-```
+[batファイルでfor文内に変数を利用する場合の罠 | なたで日記](https://blog.natade.net/2018/10/06/windows-bat-%E9%81%85%E5%BB%B6%E7%92%B0%E5%A2%83%E5%A4%89%E6%95%B0-for-if/)  
