--- a/DB/SQLServer/構造関係/列追加.md
+++ b/DB/SQLServer/構造関係/列追加.md
@@ -56,14 +56,8 @@ BEGIN TRY
     COMMIT TRAN
 END TRY
 BEGIN CATCH
+    THROW
     ROLLBACK TRAN
-    SELECT
-        ERROR_NUMBER() AS ErrorNumber,
-        ERROR_SEVERITY() AS ErrorSeverity,
-        ERROR_STATE() AS ErrorState,
-        ERROR_PROCEDURE() AS ErrorProcedure,
-        ERROR_LINE() AS ErrorLine,
-        ERROR_MESSAGE() AS ErrorMessage
 END CATCH
 ```
 
@@ -142,14 +136,8 @@ BEGIN TRY
     COMMIT TRAN
 END TRY
 BEGIN CATCH
+    THROW
     ROLLBACK TRAN
-    SELECT
-        ERROR_NUMBER() AS ErrorNumber,
-        ERROR_SEVERITY() AS ErrorSeverity,
-        ERROR_STATE() AS ErrorState,
-        ERROR_PROCEDURE() AS ErrorProcedure,
-        ERROR_LINE() AS ErrorLine,
-        ERROR_MESSAGE() AS ErrorMessage
 END CATCH
 ```
 
