--- a/GoodCode,BadCode/8.密結合.md
+++ b/GoodCode,BadCode/8.密結合.md
@@ -1,1 +1,1308 @@
 # 8. 密結合 絡まって解きほぐせない構造
+
+**結合度**とは、「モジュール間の依存の度合いを示す指標」のことを言う。  
+凝集度と同様に、モジュールの粒度をクラスとする。  
+「クラス間の、依存の度合いを表す指標」を結合度として話を進める。  
+
+あるクラスが、他の多くのクラスに依存している構造を**密結合**と呼ぶ。  
+密結合なコードは理解が難しく、変更が非常に難しくなる。  
+
+結合度の低い、疎結合な構造へ改善すると、コードの変更が楽になるのは言わずもがな。  
+どう改善すればよいのか、考え方と方法をまとめていく。  
+
+---
+
+## 8.1 密結合と責務
+
+責務が考慮されていないと何が問題となるのか。  
+ECサイトに機能追加する架空のシチュエーションを例とする。  
+
+あるECサイトで割引サービスが追加されることになった。  
+ここでは通常割引と呼称する。  
+通常割引は以下の仕様とする。  
+
+- 商品1点につき300円を割り引く  
+- 上限20,000円まで商品追加可能  
+
+担当者は以下のように実装したとする。  
+
+``` java
+// リスト8.1
+// 商品割引に関連するクラス
+
+class DiscountManager {
+    List<Product> discountProducts;
+    int totalPrice;
+
+    // 商品を追加する
+    // @param product 商品
+    // @param productDiscount 商品割引情報
+    // @return 追加に成功した場合true
+    boolean add(Product product, ProductDiscount productDiscount) {
+        if (product.id < 0) {
+            throw new IllegalArgumentException();
+        }
+        if (product.name.isEmpty()) {
+            throw new IllegalArgumentException();
+        }
+        if (product.price < 0) {
+            throw new IllegalArgumentException();
+        }
+        if (product.id != productDiscount.id) {
+            throw new IllegalArgumentException();
+        }
+
+        int discountPrice = getDiscountPrice(product.price);
+
+        int tmp;
+        if (productDiscount.canDiscount) {
+            tmp = totalPrice + discountPrice;
+        } else {
+            tmp = totalPrice + product.price;
+        }
+        if (tmp <= 20000) {
+            totalPrice = tmp;
+            discountProducts.add(product);
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+    // 割引価格を取得する
+    // @param price 商品価格
+    // @return 割引価格
+    static int getDiscountPrice(int price) {
+        int discountPrice = price - 300;
+        if (discountPrice < 0 ) {
+            discountPrice = 0;
+        }
+        return discountPrice;
+    }
+}
+
+// 商品
+class Product {
+    int id;      // 商品ID
+    String name; // 商品名
+    int price;   // 価格
+}
+// 商品割引情報
+class  ProductDiscount {
+    int id;              // 商品ID
+    boolean canDiscount; // 割引可能な場合true
+}
+```
+
+DiscountManager.addメソッドでは、以下のことを実行している。  
+
+- productの不正をチェック。  
+- getDiscountPriceで割引価格の計算。  
+- productDiscount.canDiscountで割引可能であれば、割引価格を総額に加算。  
+  そうでなければ通常価格を加算。  
+- 総額上限20,000円以内であれば商品リストに追加。  
+
+通常割引以外に、以下に示す夏季限定割引の仕様が追加されたとする。  
+
+- 商品１点につき300円を割り引く。通常割引と同じ。  
+- 上限30,000円まで商品追加可能。  
+
+DiscountManagerクラスを実装した担当者とは別の担当者が、以下に示すSummerDiscountManagerクラスを実装したとする。  
+
+``` java
+// リスト8.2
+// 夏季限定割引を管理するクラス
+
+class SummerDiscountManager {
+    DiscountManager discountManager;
+
+    // 商品を追加する
+    // @param product 商品
+    // @return 追加に成功した場合true
+    boolean add(Product product) {
+        if (product.id < 0 ) {
+            throw new IllegalArgumentException();
+        }
+        if (product.name.isEmpty()) {
+            throw new IllegalArgumentException();
+        }
+
+        int tmp;
+        if (product.canDiscount) {
+            tmp = discountManager.totalPrice + discountManager.getDiscountPrice(product.price);
+        } else {
+            tmp = discountManager.totalPrice + product.price;
+        }
+        if (tmp < 30000 ) {
+            discountManager.totalPrice = tmp;
+            discountManager.discountProducts.add(product);
+            return true;
+        } else {
+            return false;
+        }
+    }
+}
+
+class Product {
+    int id;              // 商品ID
+    String name;         // 商品名  
+    int price;           // 価格
+    boolean canDiscount; // ←新規追加。夏季割引可能な場合true
+}
+```
+
+``` mermaid
+---
+title: 図8.2 安易に流用していいのだろうか?
+---
+classDiagram
+    class SummerDiscountManager{
+        add(product: Product) boolean
+    }
+
+    class DiscountManager{
+        totalPrice : int
+
+        add(product: Product,productDiscount: ProductDiscount) boolean
+        getDiscount(int price)$ int
+    }
+
+    class Product {
+        id : int
+        name : String
+        price : int
+        canDiscount : boolean
+    }
+
+    class ProductDiscount {
+        id : int
+        canDiscount : boolean
+    }
+
+    SummerDiscountManager --> DiscountManager
+    DiscountManager -->"0..*" Product
+    DiscountManager --> ProductDiscount
+    SummerDiscountManager ..> Product
+```
+
+SummerDiscountManager.addメソッドは以下を実行する。  
+一部異なるが、DiscountManager.addと大体同じ処理の流れとなっている。  
+
+- productの不正をチェック。  
+- 割り引く仕様が通常割引と同じ300円であるため、DiscountManager.getDiscountPriceを流用して割引価格を計算。  
+- Product.canDiscountで割引可能であれば割引価格を総額に加算。そうでなければ通常価格を加算。  
+- 総額上限30,000円以内であれば商品リストに追加。  
+
+---
+
+### 8.1.1 発生する様々なバグ
+
+しばらくしてこの割引サービスに、様々な問題が発生するようになった。  
+以下の仕様変更が発生したとする。  
+
+- 通常割引の割引価格を、300円から400円に変更する。  
+
+DiscountManagerの実装担当者は、割引計算をするDiscountManager.getDiscountPriceを次のように書き換えた。  
+
+``` java
+// リスト8.3
+// 割引計算の仕様変更
+
+static int getDiscountPrice(int price) {
+    int discountPrice = price - 400;
+    if (dictountPrice < 0 ) {
+        discountPrice = 0;
+    }
+    return discountPrice;
+}
+```
+
+すると、夏季割引サービスでも割り引かれる価格が400円になってしまった。  
+夏季割引サービスを担うSummerDiscountManagerで、DiscountManager.getDiscountPriceが流用されていたためである。  
+他にも、以下のようなバグが発生した。  
+
+表8.1 割引サービスで発生したバグ  
+|バグ|原因|
+|:-|:-|
+|マイナス価格の商品を夏季割引に追加できてしまう。|SummerDiscountManager.addで価格チェックロジックが未実装だった。|
+|割引対象商品に設定したはずなのに、割引対象にならない。|ProductDiscount.canDiscountとProduct.canDiscountがお互い紛らわしく、誤って使われていた。|
+
+---
+
+### 8.1.2 ロジックの置き場所がちぐはぐ
+
+この割引サービスのロジックは、置き場所に問題がある。  
+
+- DiscountManagerが、商品情報のチェックの他、割引価格の計算、割引適用するかの判断、総額上限のチェックなど、多くの処理をやりすぎている。  
+  SummerDiscountManagerも同様。  
+- Product自身に持たせるべきバリデーションロジックが、DiscountmanagerやSummerDiscountManagerに実装されている。  
+- ProductDiscount.canDiscountとProduct.canDiscountの名前が酷似。  
+  通常割引か夏季割引、どちらに関係するのかわかりにくい。  
+- 夏季割引価格の計算のため、SummerDiscountManagerがDiscountmanagerの通常割引ロジックを流用している。  
+
+このように、各ロジックの置き場所がちぐはぐになっている。  
+一部のクラスに処理が集中していたり、一方別のクラスでは何も処理を持っていなかったり、他のクラスの一部のメソッドを無理やり都合よく流用したりしている。  
+
+このようなクラスが、いわゆる責務が**考慮されていないクラス**となる。  
+
+---
+
+### 8.1.3 単一責任の原則
+
+責任について、日常生活に当てはめて考える。  
+お金を使いすぎて借金生活に陥った場合、使いすぎた人自身の責任となる。  
+他の誰の責任でもない。  
+
+責任は、誰がその責任を負うべきか適用範囲とセットになる。  
+ソフトウェアも同様となる。  
+
+ソフトウェアは、表示、金額計算、データベースなど、様々な関心事を扱う。  
+ここで、表示にバグがあった場合、データベースの処理を修正しようとするだろうか。  
+そうはならんやろ。  
+正しく表示するよう制御するのは、表示を担うロジックの責任となる。  
+
+つまりソフトウェアにおける責任とは、「ある関心事について、不正な動作にならないよう、正常に動作するよう制御する責任」と考えることができる。  
+
+ここで重要な役割を果たすのが、**単一責任の原則**となる。  
+「クラスが担う責任は、たった一つに限定すべき」とする設計原則のこと。  
+この原則の観点から先の割引サービスのソースコードを見ると、今まで見えなかった悪魔が見えてくる。  
+
+---
+
+### 8.1.4 単一責任の原則違反で生まれる悪魔
+
+DiscountManage.getDiscountPriceは、通常割引価格の計算に責任を負うメソッドとなる。  
+夏季割引価格の責任を負うように用意されたものでは無い。  
+しかし、2重に責任を負わされており、単一責任原則に違反している。  
+割り引かれる価格が同じだからと言って安易に流用すると、片方の割引に仕様変更があったときにもう片方も変更されてしまい、バグとなってしまう。  
+
+商品名や価格が妥当か判断する責任は、それらのデータを所有するProductクラスが本来負うべきところである。  
+しかし、Productは何もしていない。  
+
+そして、DiscountManagerクラスなどが、Productクラスの代わりに値チェックを行っている。  
+DiscountManagerは、負わすべき責任を負わせずなんでもやってあげてしまっている、過保護なクラスとなっている。  
+このようなクラスを作ると、他のクラスは未熟となってしまう。  
+すると、値チェックを筆頭に重複コードが量産されることになってしまう。  
+
+---
+
+### 8.1.5 責務が単一になるようクラスを設計する
+
+単一責任の原則の違反で生まれた悪魔を退治するには、責務が単一になるようクラスを設計することが大事となる。  
+割引サービスのソースコードに関して、一部ではあるが、単一責任になるようクラスを設計する例を次に示す。  
+
+商品の定価についてはRegularPriceクラスを用意する。  
+そして価格に不正が発生しないよう、バリデーションロジックを持たせる。  
+定価に対して責任を持つ、値オブジェクトクラスとなる。  
+バリデーションロジックがRegularPriceクラス内に凝集しているため、バリデーションロジックの重複コードが生じにくくなる。  
+
+``` java
+// リスト8.4
+// 定価クラス
+
+class RegularPrice {
+    private static final int MIN_AMOUNT = 0;
+    final int amount;
+
+    RegularPrice(final int amount) {
+        if (amount < MIN_AMOUNT) {
+            throw new IllegalArgumentException("価格が0以上ではありません。");
+        }
+        this.amount = amount;
+    }
+}
+```
+
+通常割引価格、夏季割引価格については、それぞれ個別に責任を負うクラスを作る。  
+どちらも値オブジェクトとして設計する。  
+
+``` java
+// リスト8.5
+// 通常割引価格クラス
+class RegularDiscountedPrice {
+    private static final int MIN_AMOUNT = 0;
+    private static final int DISCOUNT_AMOUNT = 400;
+    final int amount;
+
+    RegularDiscountedPrice(final RegularPrice price) {
+        int discountedAmount = price.amount - DISCOUNT_AMOUNT;
+        if (discountedAmount < MIN_AMOUNT) {
+            discountedAmount = MIN_AMOUNT;
+        }
+        amount = discountedAmount;
+    }
+}
+
+// リスト8.6
+// 夏季割引価格クラス
+class SummerDiscountedPrice {
+    private static final int MIN_AMOUNT = 0;
+    private static final int DISCOUNT_AMOUNT = 300;
+    final int amount;
+
+    SummerDiscountedPrice(final RegularPrice price) {
+        int discountedAmount = price.amount - DISCOUNT_AMOUNT;
+        if (doscountedAmount < MIN_AMOUNT) {
+            discountedAmount = MIN_AMOUNT;
+        }
+        amount = discountedAmount;
+    }
+}
+```
+
+``` mermaid
+---
+title: 図8.3 概念の異なる金額ごとに丁寧にクラス化すべし
+---
+classDiagram
+    direction LR
+    class RegularDiscountedPrice{
+        amount : int
+
+        RegularDiscountedPrice(price: RegularPrice)
+    }
+
+    class SummerDiscountedPrice{
+        amount : int
+
+        SummerDiscountedPrice(price: RegularPrice)
+    }
+
+    class RegularPrice {
+        amount : int
+        RegularPrice(amount : int)
+    }
+
+    RegularDiscountedPrice ..> RegularPrice
+    SummerDiscountedPrice ..> RegularPrice
+```
+
+クラスが通常割引価格、夏季割引価格の責務ごとに個別に分かれている。  
+そのため、割引価格の仕様がそれぞれ変更されてもお互いに影響はない。  
+このように関心事それぞれが分離、独立している構造を疎結合と呼ぶ。  
+密結合とは逆の構造となる。  
+設計は疎結合な設計を目指すべし。  
+
+---
+
+### 8.1.6 DRYの原則の誤用
+
+RegularDiscountedPriceとSummerDiscountedPriceのロジックはほぼ同じである。  
+割り引かれる価格DISCOUNT_AMOUNTの値以外に差異はない。  
+「重複コードではないか？」と思われるかもしれない。  
+
+しかし、例えば「夏季割引価格は定価より5%オフにする」という仕様に変わったとしたらどうだろうか？  
+SummerDiscountedPriceのロジックはRegularDiscountedPriceとは違うものになるだろう。  
+
+このように、同じようなロジックが複数あるからといって、責務を考えず無理にひとまとめにすると債務が多重となる。  
+DiscountManager.getDiscountPriceで発生したのと同様に、ある割引価格の変更が他の割引価格に影響してしまうことになる。  
+
+**DRY原則(Don'tRepeatYourself)**と呼ばれる原則がある。  
+直訳すると「繰り返しを避けよ」という意味になるが、一部ではこれが「コードの重複を許すな」といった解釈で広まっているらしい。  
+原点「新装版 達人プログラマー 職人から名匠への道」では以下のように説明されている。  
+
+>すべての知識はシステム内において、単一、かつ明確な、そして信頼できる表現になっていなければならない。  
+
+知識とはいったい何だろうか。  
+粒度、技術レイヤー、様々な観点で考えることができる。  
+その内の一つに、ソフトウェアが対象とするビジネス知識がある。  
+
+ビジネス知識とは、ソフトウェアで扱うビジネス概念のことを言う。  
+例えば、ECサイトでは、「割引」「気になる商品」「クリスマスキャンペーン」、ゲームでは「ヒットポイント」「攻撃力」「耐性」等、これらがビジネス概念となる。  
+
+通常割引と夏季限定割引はそれぞれ別の概念となる。  
+DRYにすべきは、それぞれの概念単位なので、**同じようなロジック、似ているロジックがあっても、概念が違えばDRYにすべきではない。**  
+概念的に異なるものどうしを無理にDRYにすると密結合となり、単一責任原則を遵守できなくなる。  
+
+---
+
+### コラム 共通化の罠
+
+処理の安直な共通化の先に待っている弊害を描いた筆者の作品。  
+動画では、複数のクラスで似たような処理があるからと、共通処理モジュールを作り上げるところから始まる。  
+そして、共通処理モジュールが便利だからと、他のクラスも次々に依存し始める。  
+しかし、その後の仕様変更により、共通処理モジュール内に依存クラスそれぞれ専用の分岐処理が実装される。  
+各クラスを別々のシステムで利用しようにも、共通処理モジュールに依存しすぎて分解できず、にっちもさっちもいかなくなる、という辛さが描かれている。  
+
+重複コードの解消には共通化が有効ではある。  
+しかし、一方で、共通化してはいけないコードがある。  
+それが、DRY原則の定義でも解説したように、似て非なるコードである。  
+仕様変更の際、特定のユースケース専用の処理を、共通ロジックに挿入しなければならない場合が出てくる。  
+そうしたロジックは、もはや共通とは呼べない。  
+共通でないとわかった段階で共通化を解消しないと、この動画のように特定のユースケースかどうかを判断する条件分岐が次々に実装されていくことになる。  
+
+処理を共通化してよいかどうかは、同じビジネス概念か同課を見分ける必要がある。  
+また、ビジネスの理解が進んでくると、あるビジネス概念が実は複数の異なる概念だった、という状況が頻繁に発生する。  
+これは度々とか偶にといったレベルではなく、本当に頻繁に発生する。  
+
+<https://twitter.com/MinoDriven/status/1127539251761909760>  
+
+---
+---
+
+## 8.2 密結合の各事例と対処方法
+
+密結合は様々な要因によって発生する。  
+様々な事例と対処方法を紹介する。  
+
+---
+
+### 8.2.1 継承に絡む密結合
+
+継承はかなり注意して扱わないと、すぐに密結合に陥る。  
+大前提として、**継承はよっぽど注意して扱わないと危険であり、基本的に継承は推奨されない。**  
+
+継承は、オブジェクト指向言語の入門書の多くで紹介されている。  
+入門書に記載があるのだからカジュアルに使ってしまいがちだが、熟練エンジニアのコミュニティなどでは、継承に対して疑問視や危険視する見方がある。  
+どのような弊害があるのだろうか。  
+
+#### スーパークラス依存
+
+ゲームを例に説明する。  
+単体攻撃と2回連続攻撃がある仕様とする。  
+この仕様が実装されたクラスが次のPhysicalAttackとなる。  
+
+``` java
+// リスト8.7
+// 物理攻撃クラス
+
+class PhysycalAttack {
+    // 単体攻撃のダメージ値を返す
+    int singleAttackDamage() {...}
+
+    // 2回攻撃のダメージ値を返す
+    int doubleAttackDamage() {...}
+}
+```
+
+さらに武闘家の物理攻撃だけは、単体攻撃、2回攻撃それぞれ特別にダメージが上乗せされる仕様とする。  
+PhysicalAttackを継承し、実装したとする。  
+
+``` java
+// リスト8.8
+// 武闘家の物理攻撃クラス(継承版)
+
+class FighterPhysicalAttack extends PhysicalAttack {
+    @Override
+    int singleAttackDamage() {
+        return super.singleAttackDamage() + 20;
+    }
+
+    @Override
+    int doubleAttackDamage() {
+        return super.doubleAttackDamage() + 10;
+    }
+}
+```
+
+``` mermaid
+---
+title: 図8.6 一見妥当そうにみえる継承だが？
+---
+classDiagram
+    direction BT
+
+    class PhysicalAttack{
+        SingleAttackDamage() int
+        doubleAttackDamage() int
+    }
+
+    class FighterPhysicalAttack{
+    }
+
+    FighterPhysicalAttack --|> PhysicalAttack
+```
+
+singleAttackDamage,doubleAttackDamageメソッドをそれぞれオーバーライドした形となる。  
+はじめはこのロジックで問題なく動作していた。  
+しかし、ある日を境に、仕様通りのダメージ値にならない問題が発生した。  
+格闘家の2回攻撃のダメージ値が10増加してほしいところが、50増加していた。  
+
+原因を調査したところ、スーパークラスであるPhysicalAttackにおいて、doubleAttackDamageメソッドでsingleAttackDamageメソッドを2回実行するロジックへ変更されていた。  
+
+もともとdoubleAttackDamageは、singleAttackDamageを実行せず、独自にダメージを計算するロジックだった。  
+ところが、singleAttackDamageを実行するロジックへ変更した結果、FighterPhysicalAttack側でオーバーライドしたsingleAttackDamageメソッドが2回呼ばれるようになった。  
+FighterPhysicalAttack.singleAttackDamage内の20が2回加算されることにより、仕様と異なるダメージ値になってしまった。  
+
+このように、継承関係にあるクラスどうしでは、サブクラスはスーパークラスの構造にひどく依存する(**スーパークラス依存**)。  
+
+サブクラスは、スーパークラスの構造をいちいち気にしなければならない。  
+スーパークラスの動向に注意していないと、この物理攻撃の例のように、スーパークラスの変更によりバグ化してしまう。  
+また、スーパークラス側は、サブクラスを気にせず変更されていく。  
+そうした観点からもサブクラスは壊れやすいといえる。  
+
+#### 継承より委譲
+
+スーパークラス依存による密結合を避けるため、**継承より委譲(委譲)**が推奨される。  
+委譲とは**コンポジション構造**にすることを言う。  
+利用したいクラスをスーパークラスとして継承するのではなく、privateなインスタンス変数として持ち、呼び出す、という使う方をする。  
+
+``` java
+// リスト8.9
+// 武闘家の物理攻撃クラス(コンポジション版)
+
+class FighterPhysicalAttack {
+    private final PhysicalAttack physicalAttack;
+    
+    // 省略
+
+    int singleAttackDamage() {
+        return physicalAttack.singleAttackDamage() + 20;
+    }
+
+    int doubleAttackDamage() {
+        return physicalAttack.doubleAttackDamage() + 10;
+    }
+}
+```
+
+``` mermaid
+---
+title: 図8.7 変更影響を受けにくいコンポジション構造
+---
+classDiagram
+    direction BT
+
+    class PhysicalAttack{
+        SingleAttackDamage() int
+        doubleAttackDamage() int
+    }
+
+    class FighterPhysicalAttack{
+        SingleAttackDamage() int
+        doubleAttackDamage() int
+    }
+
+    FighterPhysicalAttack --* PhysicalAttack : コンポジション
+```
+
+コンポジション構造にすることで、PhysicalAttackのロジックが変更されてもFighterPhysicalAttackは影響を受けなくなる。  
+
+#### 継承による悪しき共通化
+
+継承を使うとサブクラスがスーパークラスのロジックを使えるようになるため、スーパークラスが共通ロジックの置き場所として利用されがちとなる。  
+継承で無理に共通化しようとした結果、密結合となり、混乱する悪しき例を挙げる。  
+
+リスト8.5、8.6の通常割引と夏季限定割引は、継承を使うとリスト8.10,8.11,8.12のように実装可能。  
+しかし、getDiscountedPriceメソッドは通常割引と夏季限定割引の2重の責任を負っており、単一責任原則に違反しているため、やってよい実装ではない。  
+
+``` java
+// リスト8.10
+// 既定クラスでの悪しき共通化
+
+// 割引の抽象基底
+abstract class DiscountBase {
+    protected int price; // 元値
+
+    // 割引価格を返す
+    int getDiscountedPrice() {
+        int discountedPrice = price - 300;
+        if (discountedPrice < 0) {
+            discountedPrice = 0;
+        }
+        return discountedPrice;
+    }
+}
+
+// リスト8.11
+// 通常割引(継承版)
+class RegularDiscount extends DiscountBase {
+    ///
+}
+
+// リスト8.12
+// 夏季限定割引(継承版)
+class SummerDiscount extends DiscountBase {
+    ///
+}
+```
+
+ここで通常割引の仕様が「1品につき400円割引」に変更されたら、どのようにロジックは変更されるだろうか。  
+人によっては次のように継承側のRegularDiscountでgetDiscountedPriceをオーバーライドするだろう。  
+
+``` java
+// リスト8.13
+// オーバーライドでの仕様変更
+
+class RegularDiscount extends DiscountBase {
+    @Override
+    int getDiscountedPrice() {
+        int discountedPrice = price - 400;
+        if (discountedPrice < 0) {
+            discountedPrice = 0;
+        }
+        return discountedPrice;
+    }
+}
+```
+
+この場合、DiscountBase.getDiscountedPriceとRegularDiscount.getDiscountedPriceのロジックは、割り引く料金(300円と400円)以外ロジックが同じとなる。  
+頑張って共通化を目指してさらに次のように「改善」する人がいるかもしれない。  
+
+``` java
+// リスト8.14
+// 割引金額以外を既定クラスで共通化
+abstract class DiscountBase {
+    // 省略
+
+    int getDiscountedPrice() {
+        int discountedPrice = price - discountCharge();
+        if (discountedPrice < 0) {
+            discountedPrice = 0;
+        }
+        return discountedPrice;
+    }
+
+    // 割り引く料金
+    protected int discountCharge() {
+        return 300;
+    }
+}
+
+
+// リスト8.15
+// 差分となる金額のみを継承側でオーバーライド
+class RegularDiscount extends DiscountBase {
+    @Override
+    protected int discountCharge() {
+        return 400;
+    }
+}
+```
+
+割り引く料金だけをdiscountChargeメソッドとして分離し、RegularDiscont側でオーバーライドするやり方となる。  
+discountChargeのオーバーライド実装には、基底クラス側のgetDiscountPriceのロジックを知っていなければならない。  
+関連知識が1つのクラスに凝集しておらず、基底と継承それぞれに分散しており、良い設計とは言えない。  
+
+ここからさらに夏季限定割引の仕様が「1品につき5%割引」に変更されたらどうなるだろうか。  
+人によっては次のようにSummerDiscount側でオーバーライドするかもしれない。  
+
+``` java
+// リスト8.16
+// 基底メソッドを関税に上書きしたオーバーライド
+
+class SummerDiscount extends DiscountBase {
+    @Override
+    int getDiscountedPrice() {
+        return (int)(price * (1.00 - 0.05));
+    }
+}
+```
+
+一応これでも動作するが、SummerDiscountによってDiscountBase.discountChargeは無関係になる。  
+ある継承クラスにとっては関係があっても、別の継承クラスにとっては無関係なメソッドが登場し始めると問題となる。  
+どこからどこまで関連があるのか、ロジックの追跡が非常に困難になり、デバッグや仕様変更で辛い思いを味わうことになる。  
+
+もっとよくない修正は次のようなものだ。  
+
+``` java
+// 8.17
+// 基底クラスに継承側のロジックを実装
+
+abstract class DiscountBase {
+    // 省略
+
+    int getDiscountedPrice() {
+        if (this instanceof RegularDiscount) {
+            int discountedPrice = price - 400;
+            if (discountedPrice < 0) {
+                discountedPrice = 0;
+            }
+            return discountedPrice;
+        } else if (this instanceof SummerDiscount) {
+            return (int)(price * (1.00 - 0.05));
+        }
+    }
+}
+```
+
+基底クラスで通常割引、夏季限定割引のどちらであるかをinstanceofで判定し、さらに割引料金を計算している。  
+異なる振る舞いを実装、表現するために継承は利用するものである。  
+振る舞いの切り替えはストラテジーパターンなどにより実現され、条件分岐の削減に貢献するが、instanceofで継承クラスの型を調べて分岐しており、条件分岐の削減に全く貢献していない。  
+また、通常割引と夏季限定割引のロジックは、RegularDiscountとSummerDiscountにそれぞれカプセル化されるべきだが、基底クラスに実装されているため、知識が分散している。  
+もし、何も知らない別の担当者が割引料金をデバッグしようとすると「あれ？夏季限定割引料金はいったいどこで計算しているんだ？」「なぜ基底クラスに夏季限定割引計算ロジックがあるんだ！？」と驚くことになるだろう。  
+
+継承側でふるまいの差分のみを実装するTemplateMethodと呼ばれる便利なデザインパターンなど、うまく設計すれば継承はうまく働く。  
+しかし、ここで上げた悪しき例では、継承は密結合やロジック混乱など、多くの悪魔を呼び寄せてしまうため、継承を使うならマジで慎重な設計が必要。  
+
+下手に継承を使わず、単一責任原則を重視することが肝要である。  
+値オブジェクトやコンポジション構造で設計できないか検討すべし。  
+
+---
+
+### 8.2.2 インスタンス変数ごとにクラス分割可能なロジック
+
+次のコードはECサイトで用いられることを想定した架空のコードとなる。  
+
+``` java
+// リスト8.18
+// 責務の異なるメソッドが詰め込まれたクラス
+
+class Util {
+    private int reservationId;         // 商品の予約ID
+    private ViewSettings viewSettings; // 画面表示設定
+    private MailMagazine mailmagazine; // メールマガジン
+
+    void cancelReservation() {
+        // reservationIdを使った予約キャンセル処理
+    }
+
+    void darkMode() {
+        // viewSettingsを使ったダークモード表示への変更処理
+    }
+
+    void beginSendMail() {
+        // mailMagazineを使ったメール配信開始処理
+    }
+}
+```
+
+cancelReservation(予約のキャンセル)、darkMode(ダークモードへの表示切替)、beginSendMail(メール配信開始)。  
+それぞれの責務の全く異なるメソッドがUtilクラスに定義されている。  
+
+責務が異なるメソッド同氏は混乱の原因になるため、同じクラスに定義すべきではない。  
+よく見ると、各メソッドはぞれぞれのインスタンス変数を使っている。  
+メソッドとインスタンス変数の依存関係が1:1であるため、各メソッドはお互いに依存関係がない。  
+
+分かりやすいように、Utilクラスの構造を図示すると、図8.10のようになる。  
+密結合解消のため分離すべし。  
+
+``` mermaid
+stateDiagram-v2
+
+    state util {
+        direction RL
+
+        cancelReservation --> reservationId
+        darkMode --> viewSettings
+        beginSendMail -->mailMagazine
+    }
+```
+
+``` mermaid
+stateDiagram-v2
+    state Reservation{
+        direction RL
+        cancelReservation --> reservationId
+    }
+    state viewCustomizing {
+        direction RL
+        darkMode --> viewSettings
+    }
+    state MailMagazineService {
+        direction RL
+        beginSendMail -->mailMagazine
+    }
+```
+
+よってUtilクラスは以下の3つのクラスに分離する。  
+
+``` java
+// リスト8.19
+// 予約クラス
+class Reservation {
+    private final int reservationId; // 商品の予約ID
+    // 中略
+    void cancel() {
+        // reservationIdを使った予約キャンセル処理
+    }
+}
+
+// リスト8.20
+// 表示カスタマイズクラス
+class ViewCustomizing {
+    private final ViewSettings viewSettings; // 画面表示設定
+    // 中略
+    void cancel() {
+        // viewSettingsを使ったダークモード表示への変更処理
+    }
+}
+
+// リスト8.21
+// メールマガジンサービスクラス
+class MailMagazineServire {
+    private final MailMagazine mailMagazine; // メールマガジン
+    // 中略
+    void beginSend() {
+        // mailMagazineを使ったメール配信開始処理
+    }
+}
+```
+
+このUtilクラスの例では依存関係がシンプルであったため、分離は楽。  
+しかし、実際の製品に用いられるコードはもっと泥臭く、混乱していて、依存関係が複雑である。  
+うまく別クラスに分離するには、どのインスタンス変数やメソッドがそれぞれ何に関係付けられているか把握することが大切となる。  
+関係の把握には**影響スケッチ**を使うとわかりやすくなる。(17.1.5 書籍「レガシーコード改善ガイド」参照)
+
+影響スケッチは神に書いたり図形描画ツールで書いたりもできるが、複雑なソースコードは図に起こすだけでも一苦労になる。  
+ソースコードを解析して影響スケッチを自動で描画してくれるツールには、[Jig](https://github.com/dddjava/jig)などがあるため、うまく活用すべし。  
+
+``` mermaid
+requirementDiagram
+    requirement RegularDiscountedPrice.amount {
+        id: 1.1
+    }
+    requirement SummerDiscountedPrice.amount {
+        id: 1.2
+    }
+
+    requirement RegularDiscountedPriceコンストラクタ {
+        id: 2.1
+    }
+    requirement SummerDiscountedPriceコンストラクタ {
+        id: 2.2
+    }
+
+    requirement RegularPrice.amount {
+        id: 3
+    }
+
+    requirement RegularPriceコンストラクタ {
+        id: 4
+    }
+
+    RegularDiscountedPrice.amount <- traces - RegularDiscountedPriceコンストラクタ
+    SummerDiscountedPrice.amount <- traces - SummerDiscountedPriceコンストラクタ
+    RegularDiscountedPriceコンストラクタ - traces -> RegularPrice.amount
+    SummerDiscountedPriceコンストラクタ - traces ->RegularPrice.amount
+    RegularPrice.amount <- traces - RegularPriceコンストラクタ
+```
+
+---
+
+### 8.2.3 なんでもPublicで密結合
+
+publicやprivateなどアクセス修飾子を付与することで、クラスやメソッドの可視性を制御できる。  
+しかし、なんでもpublicにすると密結合になる。  
+
+パッケージ間で問題になる例を挙げる。  
+ゲームでは、外部仕様には表れない「隠し要素」と呼ばれるものがある。  
+隠し要素は、画面上に一切表示されないものの、ゲームの展開に内部的に影響を与える。  
+メンバーどうしの相性や好感度などが代表的。  
+
+次のHitPointRecoveryは魔法によるヒットポイント回復をカプセル化したクラスとなる。  
+
+``` java
+// リスト8.22
+// ヒットポイント回復クラス
+
+package rpg.objects;
+
+// ヒットポイント回復
+public class HitPointRecovery {
+
+    // @param chanter           回復魔法の詠唱者
+    // @param targetMemberId    回復魔法を受けるメンバーのID
+    // @param positiveFeelings  メンバーどうしの好感度
+    public HitPointRecovery(final Member chanter, final int targetMemberId, final PositiveFeelings positiveFeelings) {
+        final int basicRecoverAmount = (int)(chanter.magicPower * MAGIC_POWER_COEFFICIENT) + (int)(chanter.affection + AGGECTION_COEFFICIENT * positiveFeelings.value(chanter.id,targetMemberId));
+    }
+    // 省略
+}
+```
+
+コンストラクタで回復量の複雑な計算をしている。  
+計算には、リスト8.23に示すPositiveFeelingsが用いられている。  
+これはメンバーどうしの好感度について制御知識を持つクラスで、隠し要素に該当する。  
+内部的に好感度が回復量に影響する仕様となる。  
+なお、HitPointRevoceryとPositiveFeelingsは同じrpg.objectsパッケージのクラスとなる。  
+
+``` java
+// リスト8.23
+// 好感度を制御するクラス
+
+package rpg.objects;
+
+// メンバーどうしの好感度。
+// subjectがtargetに対して抱く好感度を取得したり、増減したりする。
+// subjectIdやtargetIdは、subjectとtargetの関係にあるメンバーのIDを表す。
+public class PositiveFeelings {
+    // @return 好感度
+    // @param subjectId 好感度を調べたいメンバーID
+    // @param targetId 好意の対象となるメンバーID
+    public int value (int subjectId,int targetId) {...}
+
+    // 好感度を増加させる
+    // @param subjectId 好感度を増加させたいメンバーID
+    // @param targetId 好意の対象となるメンバーID
+    public void increase(int subjectId, int targetId) {...}
+
+    // 好感度を減少させる
+    // @param subjectId 好感度を減少させたいメンバーID
+    // @param targetId 好意の対象となるメンバーID
+    public void decrease(int subjectId, int targetId) {...}
+}
+```
+
+ところが、先頭画面を制御するBattleViewクラスでPositiveFeelingsが呼び出され、好感度が変更されている。  
+
+``` java
+// リスト8.24
+// 内的に扱いたいクラスが他のパッケージから呼び出されている
+
+package rpg.view;
+import rpg.object;
+
+// 先頭画面
+public class BattleView {
+    // 中略
+
+    // 攻撃アニメーションを開始する
+    public void startAttackAnimation() {
+        // 中略
+        positiveFeelings.increase(member1.id,member2.id);
+    }
+}
+```
+
+PositiveFeelingsは隠し要素である。  
+画面上への表示したくないし、ましてや外部からの制御も受けたくはない、内部的な制御に留めておきたいクラスになる。  
+
+BattleViewはrpg.viewパッケージで、PositiveFeelingsとはパッケージが異なる。  
+しかしながら、PositiveFeelingsへアクセスできてしまっている。  
+なぜなら、PositiveFeelingsがPublicで宣言されているためである。  
+public宣言されると、ほかのパッケージからアクセス可能になってしまう。  
+
+このようにいたずらにpublicにすると、関係し合ってほしくないクラスどうしが結合し、影響範囲が拡大する。  
+結果、メンテナンスが困難な密結合構造になってしまう。  
+密結合を避けるには、アクセス修飾子で可視性を適切に制御する。  
+
+表8.2 Javaのアクセス修飾子  
+|アクセス修飾子|説明|
+|:-|:-|
+|public|すべてのクラスからアクセス可能|
+|protected|同じクラス、または継承クラスからアクセス可能|
+|なし|同じパッケージからのみアクセス可能。package privateと呼ぶ|
+|private|同じクラスからのみアクセス可能|
+
+PositiveFeelingsクラスは、どのアクセス修飾子が適切だろうか。  
+同じrpg.objectsパッケージのHitPointRecovertyクラスからは呼び出しが必要となる。  
+一方で、他のパッケージからは利用されたくはない。  
+となれば、アクセス修飾子なしの`package private`が適切となる。  
+
+デフォルトのものは表記を省略する仕様が、様々なプログラミング言語やフレームワークに備わっている。  
+デフォルトと異なっている場合のみ、違いを明記する考え方となる。[^1]  
+なぜアクセス修飾子を省略したデフォルトの状態だと`package private`なのか。  
+それは、パッケージどうしの不要な依存を避けるのに適切だからである。  
+
+パッケージは強く関連付くクラスどうしを凝集するよう設計する。  
+一方で、パッケージ外とは疎結合にする。  
+そのため、外部からはアクセスできないようにする。  
+すると、package privateが相応しくなる。  
+そして、外部に本当に公開したいクラスのみ、限定的にpublic宣言する。  
+疎結合にしようとすると、publicはデフォルトとはならないことが理解できるはず。  
+
+しかしながら、実際には不適切と思われる場面でもpublicが広く用いられている。[^2]  
+なぜこうもpublicが当然かのように扱われているのか。  
+筆者の憶測では、多くのプログラミング入門書や入門サイトで、publicが標準的な扱いで書かれていることが原因の一端にあるのではないかとのこと。  
+入門書は初学者に言語仕様を学んでもらうことを主眼とし、設計的に望ましいかといったところとは別の観点で解説している。  
+こういった背景を知らない初学者がpublicだらけのソースコードを読み、「publicを書くのが当然なんだ、標準なんだ」と学習してしまう。  
+結果として、public宣言が量産されているのは想像に難くない。[^3]  
+
+クラスは標準的には、`package private`とすべし。(C#ならinternal)  
+パッケージ外の公開が必要なクラスのみ、限定的にpublic宣言すべし。  
+
+``` mermaid
+stateDiagram-v2
+    state rpg.object {
+        +HitPointRecovery
+        PositiveFeelings
+    }
+    
+    state rpg.view {
+        direction RL
+        +BattleView
+    }
+
+    +HitPointRecovery --> PositiveFeelings
+    +BattleView --> PositiveFeelings : × package privateはパッケージ外からアクセス不可
+```
+
+[^1]「設定より既定」と呼ばれる考え方。  
+[^2] C#における`package private`相当のアクセス修飾子は`internal`となる。  
+C#でもアクセス修飾子を省略するとinternalになる。  
+筆者の観測範囲では、internalを適切に利用しているケースをあまり見たことがない模様。  
+privateかpublicとなっているケースがほとんどだとか。  
+同僚がどうやって実装しているのか後ろから見ていたら、いきなりpublicから書き始めたとか。  
+[^3] 入門コンテンツが悪いというわけではない。  
+パッケージ設計は難度が高く、文法事項を中心に据える中で適切に解説するのは厳しいだろう。  
+可視性の制御まで詳細に取り扱えないジレンマがあると考える。  
+
+---
+
+### 8.2.4 privateメソッドだらけ
+
+ソフトウェアの機能が拡充されていくと、クラスはどんどん大きくなっていく。  
+大きくなってきたクラスには、メソッドが何個も定義されていく。  
+
+``` java
+// リスト8.26
+// 注文サービスクラス
+
+class OrderService {
+    // 中略
+    private int calcDiscountPrice(int Price) {
+        // 割引価格を計算するロジック
+    }
+
+    private List<Product> getProductBrowsingHistory(int userId) {
+        // 商品の閲覧履歴を取得するロジック
+    }
+}
+```
+
+OrderServiceは、ECサイトにおける注文をつかさどるクラスとする。  
+注文時には割引を適用したいケースや商品の閲覧履歴から注文したいケースがあるだろう。  
+こうしたケースに対応するためのメソッドがcalcDisountPriceやgetProductBrowsingsHistoryのように、既存のクラスにべた書きされることが頻繁にある。  
+
+しかし、責務の観点から考えてみよう。  
+割引価格や閲覧履歴は注文とは責務が異なる。  
+
+こうした構造は、割引計算をするために予約をつかさどるReservationServiceクラスからOrderService.calcDiscountPriceを呼び出すといった、非常にいびつな構造になってしまう場合がある。  
+いびつな依存を排除するため、他のクラスから呼び出されないようprivateなメソッドとして実装されることが多い。  
+
+しかし、筆者の経験上、privateメソッドが多いクラスは、単一責任ではなく、多くの責務を持ってしまっている。  
+異なる責務のロジックがprivateメソッドとして実装されている。  
+
+責務の異なるメソッドは、別々のクラスに分離すべし。[^1]  
+例えば割引価格はDiscountPriceクラス、商品閲覧履歴はProductBrowsingHistoryクラスに分離する。  
+
+[^1] privateに限らず、publicであっても責務外のものがあるので注意が必要。  
+
+---
+
+### 8.2.5 高凝集の誤解から来る密結合
+
+機能拡充とクラス大型化に伴う密結合の例をもう一つあげる。  
+強く関係し合うデータとロジックが一か所にまとめられた構造を**高凝集**と呼ぶが、高凝集の誤解により密結合になってしまうケースとなる。  
+次に示す販売価格クラス、SellingPriceがあったとする。  
+
+``` java
+// リスト8.27
+// 販売価格クラス
+
+class SellingPrice {
+    final int amount;
+
+    SellingPrice(final int amount) {
+        if (amount < 0) {
+            throw new IllegalArgumentExecption("価格が0以上でありません。");
+        }
+        this.amount = amount;
+    }
+}
+```
+
+開発が進んでくるとに示すように、様々な計算メソッドが次々に追加されがちになる。  
+
+``` java
+// リスト8.28
+// 販売価格を使った計算メソッドが追加されていく
+
+class SellingPrice {
+    // 省略
+
+    // 販売手数料を計算する
+    int calcSellingCommission() {
+        return (int)(amount * SELLING_COMMISSION_RATE);
+    }
+
+    // 配送料を計算する
+    int calcDeliveryCharge() {
+        return DELIVERY_FREE_MIN <= amount ? 0 : 500;
+    }
+
+    // 獲得するショッピングポイントを計算する
+    int calcShoppingPoint() {
+        return (int)(amount * SHOPPING_POINT_RATE);
+    }
+```
+
+これらのメソッドは、販売価格を使って販売手数料や配送料を計算している。  
+凝集性についていくらか知識のある一部のエンジニアは「販売手数料や配送料は販売価格に強く関係し合っているから」と考えてSellingPriceクラスにメソッドを追加するかもしれない。  
+しかし、販売価格とは別の概念が紛れ込んでいるため、密結合となっている。  
+
+calcShppingPointメソッドはショッピングポイントを扱っており、明らかに販売価格とは別概念となっている。  
+同様に、calcDeliveryChargeメソッドの配送料も、calcSellingCommissionメソッドの販売手数料も、販売価格とは違う。  
+販売価格のクラスにショッピングポイントや配送料といった別の概念のロジックが紛れ込むと、どこになんのロジックが書かれているのか読み解くのが困難になる。  
+
+**高凝集を意識して強く関係していそうなロジックを一か所にまとめ上げようとしたものの、結果として密結合に陥っているケースは非常に多く見られる。**  
+**誰もが極めて陥りやすい罠といえる。**  
+それぞれの概念は分離し、疎結合にしなければならない。  
+そのため、設計においては**疎結合高凝集**と呼称し、セットで語られることが多い。  
+
+次に示すように、それぞれの概念を丁寧に値オブジェクトとして設計する。  
+ある概念の値を使って別の概念の値を算出したい場合は、SellingCommissionクラスのコンストラクタのように、計算に使う値(販売価格sellingPrice)をコンストラクタの引数として渡す。  
+
+高凝集設計の際は、別の概念が混入して密結合に陥っていないか注意すべし。  
+
+``` java
+// リスト8.29
+// 販売手数料クラス
+class SellingCommission {
+    private static final float SELLING_COMMISSION_RATE = 0.05;
+    final int amount;
+
+    SellingCommission(final SellinPrice sellingPrice) {
+        amount = (int)(sellingPrice.amount * SELLING_COMMISSION_RATE);
+    }
+}
+
+// リスト8.30
+// 配送料クラス
+class DeliveryCharge {
+    private static final int DELIVERY_FREE_MIN = 2000;
+    final int amount;
+
+    DeliveryCharge(final SellingPrice sellingPrice) {
+        amount = DELIVERY_FREE_MIN <= sellingPrice.amount ? 0 : 500;
+    }
+}
+
+// リスト8.31
+// ショッピングポイントクラス
+class ShoppingPoint {
+    private static final float SHOPPING_POINT_RATE = 0.01f;
+    final int value;
+
+    ShoppingPoint(final SellingPrice sellingPrice) {
+        value = (int)(sellingPrice.amount * SHOPPING_POINT_RATE);
+    }
+}
+```
+
+``` mermaid
+classDiagram
+
+class SelligPrice {
+    amount : int
+    SellingPrice(amount:int)
+}
+
+class SellingCommission {
+    SELLING_COMMISSION_RATE float$
+    amount int
+
+    SellingCommission(sellingPrice:SellinPrice)
+}
+
+class DeliveryCharge {
+    DELIVERY_FREE_MIN int$
+    amount int
+    DeliveryCharge(sellingPrice: SellingPrice)
+}
+
+class ShoppingPoint {
+    SHOPPING_POINT_RATE float$
+    value int
+
+    ShoppingPoint(sellingPrice:SellingPrice)
+}
+
+SellingCommission ..|> SelligPrice
+DeliveryCharge ..|> SelligPrice
+ShoppingPoint ..|> SelligPrice
+```
+
+---
+
+### 8.2.6 スマートUI
+
+表示関連のクラスの中に、表示以外の責務のロジックが実装されている構造を**スマートUI(利口なUI)**と呼ぶ。  
+例えば、開発初期、サービスをとにかく急いでローンチさせるため、複雑な金額計算ロジックや分岐ロジックがフロント側に実装されてしまいがちになる。  
+問題になるのは、その後画面デザインを一新したいケースとなる。  
+機能は同じでデザインを全く新しいものに差し替えようとすると、何が起こるか。  
+複雑な金額計算ロジックなどがフロントのコードに紛れ込んでいるせいで、下手に新デザインに差し替えると、これまで機能していたものが機能しなくなったり、バグが発生したりする。  
+新デザインへ差し替えるには、機能が壊れないよう慎重に変更しなければならなくなる。  
+スマートUIは、表示責務と表示以外の責務が密結合になっているせいで、変更を難しくしてしまう。  
+
+表示責務と表示以外の責務をそれぞれのクラスに分離すべし。  
+
+※表示とそれ以外の部分を分離するアーキテクチャーがMVVMとなる。  
+
+---
+
+### 8.2.7 巨大データクラス
+
+大量のインスタンス変数を持ったクラス。  
+
+``` java
+// リスト8.32
+// 巨大データクラス
+
+public class Order {
+    public int orderId;                       // 注文ID
+    public int customerId;                    // 発注者ID
+    public List<Product> products;            // 注文品一覧
+    public ZonedDateTime orderTime;           // 注文日時
+    public OrderState orderState;             // 注文状態
+    public int reservationId;                 // 予約ID
+    public ZonedDateTime reservationDateTime; // 予約日時
+    public String deliveryDestination;        // 配送先
+    // 他たくさんのインスタンス変数
+}
+```
+
+例えばECサイトの注文クラスOrderは発注から配送まで参照されることが多い。  
+そのため、何も考えずに実装すると、様々なデータの置き場所になりがち。  
+また、「便利なデータ運搬役」としてさらに多くのデータを追加されがちで、どんどん巨大化していく。  
+
+単なるデータクラスとは異なり、巨大データクラスはさらに多くの問題を引き寄せる。  
+ECサイトでは、発注、予約、配送など、様々なユースケースがある。  
+各ユースケースでは、必要なデータだけ変更できればよいはずである。  
+しかし、予約ユースケースでも予約以外のデータを変更可能な構造になっている。  
+無関係なdeliveryDestinationなどを変更できてしまう。  
+不注意で変更してしまい、バグになる可能性がある。  
+
+巨大データクラスは様々なデータを持つために、あらゆるユースケースで使われる。  
+するとグローバル変数の性質を帯びてくる。  
+排他制御のためにパフォーマンスが低下するなど、グローバル変数と同様の弊害を招く(9.5)  
+
+---
+
+### 8.2.8 トランザクションスクリプトパターン
+
+リスト8.1のDisountManager.addメソッドのように、メソッド内に一連の処理手順がダラダラと長く書き連ねられている構造を**トランザクションスクリプトパターン**と呼ぶ。[^1]  
+
+これはデータを所持するクラス(データクラス)とデータを処理するクラスとで分けている場合に頻繁に実装される。  
+長いものでは数百行の長大なメソッドになる。  
+
+低凝集密結合で変更が困難。  
+
+[^1]※手続き型プログラミングとも呼ぶ。  
+
+---
+
+### 8.2.9 神クラス
+
+**神クラス**とは、1クラス内に何千何万行ものロジックを持ち、あらゆる責務のロジックが、乱雑に絡み合うように書きなぐられているようなクラスのことを言う。  
+トランザクションスクリプトパターンが重症化すると、神クラスになる。  
+
+神と名付けられているが、その正体はあらゆる問題の巣窟、密結合の権化である。  
+神クラスには、**開発者の時間を奪い、多大な苦労を与えて疲弊させてしまう**、恐ろしい力が宿っている。  
+
+どのロジックが何に関係するのか、責務の見分けが非常に困難となる。  
+仕様変更の際、影響箇所を何千何万行ものロジックの中から探し出すのに多大な苦労を要する。  
+
+影響調査の漏れも生じやすく、当然バグ化する。  
+バグ修正して、また漏れのあった箇所を修正して、の繰り返し作業へと変質していく。  
+もぐら叩きの様相を呈し、運良く発見されなかったバグはリリース後に牙をむく。  
+
+値オブジェクトは、コンストラクタで不正値を検出し、例外をスローする構造であるため、不正の発生元をすぐに調べられる。  
+しかし、神クラスは不正検知ロジックが乱雑に書きなぐられているか、そもそも書かれていないため、どこで不正が発生したのか追跡が非常に困難となり、調査に膨大な時間がかかる。  
+
+---
+
+### 8.2.10 密結合クラスの対処法
+
+巨大データクラスもトランザクションスクリプトパターンも神クラスも、密結合なクラスの対処方法はどれも同じである。  
+これまで解説してきたオブジェクト指向設計と単一責任の原則に基づき、丁寧に設計する事だ。  
+
+巨大な密結合クラスは責務ごとにクラスを分割しよう。  
+プログラミング言語により多少違いはあるが、単一責任の原則を遵守するよう設計されたクラスは、どんなに多くても200行程度、大体は100行程度になる。  
+そのくらいクラス1つ1つは小さなものになる。  
+
+そのほか、アーリーリターン、ストラテジーパターン(6.2.7)、ファーストクラスコレクションパターン(7.3.1)など、様々な手法が有効である。  
+目的駆動名前設計(10章)に基づく命名も大いに役に立つ。  
+
+※書籍「レガシーコード改善ガイド」では、神クラスの対処法を豊富に取り扱っている。  
