--- a/GoodCode,BadCode/9.設計の健全性を損なう様々な要因.md
+++ b/GoodCode,BadCode/9.設計の健全性を損なう様々な要因.md
@@ -525,14 +525,216 @@ class Level {
     static Level initialize() {
         return new Level(MIN);
     }
+
+    // レベルアップする
+    Level increase() {
+        if (value < MAX) return new Level(value + 1);
+        return this;
+    }
+}
+```
+
+このクラスのインスタンス変数valueはfinal修飾子が付与され、後から変更ができないようになっている。  
+レベルは1~99の範囲で有効であることが定数で定められ、ガード節で無効値を弾くようにもなっている。  
+increaseメソッドにより、レベルは1ずつ上昇する仕組みとなっている。  
+不正なレベル値が入り込むスキがないように見えるが、以下のコードを実行すると、期待した動作を満たさない。  
+
+``` java
+// リスト9.17
+// リフレクションを用いた値の書き換え
+
+Level level = Level.initialize();
+// Level : 1
+
+Field field = Level.class.getDeclaredField("value");
+field.setAccessible(true);
+field.setInt(level,999);
+// Level : 999
+```
+
+不変であるはずのインスタンス変数valueの値が書き変わってしまった。  
+
+リフレクションを使うと、finalで不変にした変数を可変にしたり、privateインスタンス変数を外部から変更できたりしてしまう。  
+やり方によっては定数も書き換え可能。  
+
+リフレクションを濫用すると、不正状態を防護する設計や、影響範囲を閉じ込める設計が全く意味をなさなくなってしまう。  
+
+---
+
+### 9.8.2 型の強みを生かせなくなるハードコード
+
+Javaに代表される静的型付け言語は、静的解析により性格にコード分析可能なのが強みとなる。  
+しかし、メタプログラミングはそうした型の強みを打ち消してしまう。  
+
+リスト9.19のようなUserクラスがあったとする。  
+
+``` java
+// リスト9.19
+// Userクラス
+
+package customer;
+
+class User {
+    // 省略
+}
+```
+
+クラスのインスタンス生成には、普通はnewキーワードを用いるが、リフレクションを使うとメタ情報からインスタンスを生成できる。  
+リスト9.20に示すgenerateInstanceメソッドは、パッケージ名とクラス名を文字列で与えると、そのクラスのインスタンスを生成して返す。  
+
+``` java
+// リスト9.20
+// メタ情報からインスタンスを生成
+
+// クラス名を指定してインスタンス生成する
+// @param packageName パッケージ名
+// @param className インスタンス生成したいクラス名
+// @return 指定したクラスのインスタンス
+static Object generateInstance(String packageName, String className) throws Exception {
+    String fillname = packageName + "." + className;
+    Class klass = class.forName(fillName);
+    Constractor constructor = klass.getDeclaredConstructor();
+    return constructor.newInstance();
 }
 
+// リスト9.21
+// メタ情報からUserクラスのインスタンスを生成
+User user = (User)generateInstance("customer", "User");
 ```
+
+IntelliJ IDEA などの IDE には、クラスやメソッドなどの名前を一括で変更してくれる機能がある。  
+Userクラスの名前をEmployerに変更するとした場合、IDEの名前変更機能を使うと、Userを参照している箇所を、すべて漏れなく正確に変更してくれる。  
+
+しかし、メタ情報から生成したクラスに対しては、名前変更機能を用いても、思ったように名前変更できない。  
+名前変更機能でUser型はEmployer型に変更されるが、generateInstanceメソッドに渡される文字列"User"は書き変わらない。  
+
+``` java
+// リスト9.22
+// 文字列としての「User」まで書き変わらない
+
+Employer user = (Employer)generateInstance("customer", "User");
+```
+
+このコードはコンパイルエラーとならないが、実行時には該当するクラスが存在しないためエラーになる。  
+IDEの静的解析により、どのクラスがどこから参照されているのか正確に分析できる。  
+そのため、名前変更機能は参照しているすべての個所を一括で変更できる。  
+ところが、単純に文字列としてハードコードされた"User"は、User型に関係するものだと認識されない。  
+そのため、名前変更の対象とならない。  
+
+IDEの静的解析は、名前変更機能のほかに、定義元へのジャンプや参照箇所の全検索など、開発の効率化や正確性向上に役立っている。  
+メタプログラミングの濫用は、こういった開発上の利点を殺してしまう。  
+
+---
+
+### 9.8.3 デメリットを理解し用途を限定すること
+
+メタプログラミングが使えると特別な能力を身に着けたかのような気分になってしまうかもしれない。  
+しかし、デメリットを理解しないとメンテナンスや変更が本当に困難になる。  
+「黒魔術」とはよく言ったもので、失敗すると凶悪な悪魔を呼び寄せ破壊してしまう。  
+
+システム解析用途に限定する、メタプログラミングの利用箇所を極めてスコープの狭い特定箇所に閉じるなど、リスクが生じない工夫が必要となる。  
 
 ---
 ---
 
 ## 9.9 技術駆動パッケージング
+
+パッケージの区切り方、フォルダの分け方に注意しないと悪魔を呼び寄せる原因になりかねない。  
+
+図9.3は、ECサイトのフォルダ構成を表したものとなる。  
+分かりやすいように、ファイル名は日本語にしている。  
+各ファイルはクラスと1:1であり、ファイル名とクラス名は同じものとする。  
+
+``` txt
+図9.3
+設計パターンごとにフォルダ分け
+
+│
+├─ UseCases
+│  ├─ 在庫ユースケース.java
+│  ├─ 注文ユースケース.java
+│  └─ 支払いユースケース.java
+├─ Entities
+│  ├─ 入庫エンティティ.java
+│  ├─ 出庫エンティティ.java
+│  ├─ 買い物かごエンティティ.java
+│  ├─ 注文エンティティ.java
+│  ├─ 発注エンティティ.java
+│  └─ 請求エンティティ.java
+└─ ValueObjects
+    ├─ 安全在庫量.java
+    ├─ 在庫回転期間.java
+    ├─ 発注金額.java
+    ├─ 注文先.java
+    ├─ 請求金額.java
+    ├─ 割引ポイント.java
+    └─ クレジットカード番号.java
+```
+
+ユースケースを表現したユースケースパターン(Use Case)、一意性を責務とするエンティティパターン(Entity)がある。  
+このフォルダ構成は、設計パターンごとにファイル分類したものになる。  
+
+これらのファイルは、どれがどれに強く関係し合うだろうか。  
+例えば、`注文先`は、`注文ユースケース`など注文関連であることが分かる。  
+では`発注金額`はどうだろうか。  
+一見`注文`に関係がありそうに見えるが、そうではなく実は`在庫ユースケース`で用いられるものとなっている。  
+名前的にわかりにくく、何かの拍子にうっかり`注文`関係で`発注金額`が使われてしまう可能性がある。  
+当然バグ化する可能性が高まる。  
+
+また、`安全在庫量`や`在庫回転期間`は`在庫`関連でしか用いられない。  
+しかし、何かの仕様を満たすために、`在庫`以外の用途で無理に`安全在庫量`が使われたりすると、本来の用途以外のものと結びついてロジックが非常に混乱してしまう。  
+
+このフォルダ構成では、様々な混乱が生じてしまう。  
+どういう観点で分けるべきだろうか。  
+
+これらのファイルは、大きく種類分けすると、在庫、注文、支払いに大別される。  
+しかし、設計パターンでフォルダ分けしているために、どれがどの種類に関連があるのか見分けが難しくなっている。  
+このように設計パターンなど、構造的に似ているものどうしでフォルダ分け、パッケージ分けするのを**技術駆動パッケージング**と呼ぶ。  
+
+Railsなど、多くのWebフレームワークはMVCアーキテクチャー[^1]を採用している。  
+こうしたフレームワークは技術駆動パッケージングといえる。  
+フレームワークの標準構造が技術駆動パッケージングであるためか、それをお手本に内部の様々なフォルダ構造も技術駆動パッケージングになりがちとなる。  
+
+この例で示した買い物かごエンティティや安全在庫量など、ビジネス概念を表すクラスを、**ビジネスクラス**と呼ぶ。  
+ビジネスクラスを技術駆動パッケージングでフォルダ分けすると、本来強く関係し合うファイルどうしがバラバラになり混乱する。  
+ファイル単位で低凝集になってしまう。  
+
+ビジネスクラスは図9.4のように、ビジネス概念として強く関係し合うものどうしが一緒になるようフォルダ分けすべし。  
+
+``` txt
+図9.4
+ビジネス概念の種類ごとにフォルダ分け
+
+│
+├─ 在庫
+│  ├─ 在庫ユースケース.java
+│  ├─ 発注ユースケース.java
+│  ├─ 入庫ユースケース.java
+│  ├─ 出庫ユースケース.java
+│  ├─ 安全在庫量.java
+│  ├─ 在庫回転期間.java
+│  └─ 発注金額.java
+├─ 注文
+│  ├─ 注文ユースケース.java
+│  ├─ 買い物かごエンティティ.java
+│  ├─ 注文エンティティ.java
+│  └─ 注文先.java
+└─ 支払い
+    ├─ 支払いユースケース.java
+    ├─ 請求エンティティ.java
+    ├─ 請求金額.java
+    ├─ 割引ポイント.java
+    └─ クレジットカード番号.java
+```
+
+このようにすることで、在庫ユースケースでしか使われない安全在庫量クラスをpackage privateにでき、注文や支払いなど無関係なユースケースから参照される危険性(8.2.3)がなくなる。  
+
+同じ分類どうしでまとまっているので、例えば支払い関係に仕様変更が生じた場合、支払いフォルダ内のファイルを読みに行けばよくなる。  
+関連ファイルをあちこち探し回る手間が低減する。  
+
+[^1]MVCとは、Model、View、Controllerの3層に分けたアーキテクチャー構造のこと。  
+MVCのように、役割ごとの層(レイヤー)で分割するアーキテクチャーをレイヤードアーキテクチャーと呼ぶ。  
+レイヤードアーキテクチャーには、MVCのほかにMVVMなどがある。  
 
 ---
 ---
