--- a/DB/SQLServer/メモ.md
+++ b/DB/SQLServer/メモ.md
@@ -376,3 +376,31 @@ RETURNはストアドでしか使えない。
 Table Scan : テーブル全体の検索  
 Clustered Index Scan : テーブルスキャンと同等の内部動作  
 Clustered Index Seek : クラスター化インデックスでの一意検索(ピンポイント検索)や部分的なスキャンを意味する。  
+
+---
+
+## 制約名を変更する方法
+
+`EXEC sp_rename N'Tamp_Table_PKC', N'Table_PKC', N'OBJECT';`  
+
+■以下、昔の書き込み  
+
+削除して追加する。  
+制約名を更新する命令はない模様。  
+
+``` sql : 主キー制約の変更
+-- 制約削除
+ALTER TABLE [テーブル名] DROP CONSTRAINT [削除する制約名]
+
+-- 制約の追加
+ALTER TABLE [テーブル名] ADD CONSTRAINT [追加する制約名]
+PRIMARY KEY ([フィールド1],[フィールド2],...)
+```
+
+外部キー制約を確認するクエリ  
+
+``` sql
+select * from sys.key_constraints
+```
+
+[【SQL Server】外部キー制約の一覧を確認する](https://sqlserver.work/2021/01/06/%E3%80%90sys-foreign_keys-%E3%80%91%E5%A4%96%E9%83%A8%E3%82%AD%E3%83%BC%E5%88%B6%E7%B4%84%E3%81%AE%E4%B8%80%E8%A6%A7%E3%82%92%E7%A2%BA%E8%AA%8D%E3%81%99%E3%82%8B/)  
